deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-demo
  labels:
    app: gitops-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.prod.howlinkdev.com
      http:
        paths:
          - backend:
              service:
                name: gitops-demo-svc
                port:
                  number: 80
            path: /
            pathType: prefix
